namespace Do_Svyazi.Message.Domain.Entities;

public enum ContentType
{
    Image,
    Video,
    Audio,
    File,
}